fix: correct color contrast issues

--- a/public/assets/custom.css
+++ b/public/assets/custom.css
@@ -1,3 +1,11 @@
+[data-theme="light"],
+:root:not([data-theme="dark"]) {
+	--primary: #0061fc;
+	--primary-hover: #e0002b;
+	--primary-focus: #e0002b;
+	--muted-color: hsl(205, 10%, 40%);
+}
+
 .underline {
 	text-decoration: underline;
 }
@@ -30,7 +38,7 @@ summary {
 }
 
 ul.subsection {
-	background-color: #eee;
+	background-color: #f0f4ff;
 	padding: 1rem 1rem 1rem 2rem;
 	margin-left: 0.5rem;
 }
